src/test/deca/context/invalid/class_pass2_8.deca
// Description:
//    test minimaliste pour induire a l erreur lors du pass 2 (declaration de parametre pas dans l'env des types)
//
// Resultats:
// erreur
//
//
// Historique:
//    cree le 14/01/2025



class B {
    void p(A a){}
}

